# Please keep these in alphabetical order
PKGDATADIR="$(pkgdatadir)/@NUX_API_VERSION@"

fontdir = $(PKGDATADIR)/Fonts
dist_font_DATA = \
  Fonts/Tahoma_size_8_bold_page_0.png \
  Fonts/Tahoma_size_8_bold.txt \
  Fonts/Tahoma_size_8_page_0.png \
  Fonts/Tahoma_size_8.txt

iconsdir = $(PKGDATADIR)/Icons
dist_icons_DATA = \
  Icons/169034134.png \
  Icons/Delicious.png \
  Icons/DeviantArt.png \
  Icons/Digg.png \
  Icons/Facebook.png \
  Icons/Flicker.png \
  Icons/Folder-16x16.png \
  Icons/Folder-24x24.png \
  Icons/FolderClose-16x16.png \
  Icons/FolderOpen-16x16.png \
  Icons/GMail.png \
  Icons/LastFM.png \
  Icons/MobileMe.png \
  Icons/MySpace.png \
  Icons/PlayStationWhite.png \
  Icons/reflec.png \
  Icons/RSS.png \
  Icons/Skype.png \
  Icons/Twitter2.png \
  Icons/Twitter.png \
  Icons/Vimeo.png \
  Icons/Wii.png \
  Icons/XBox.png \
  Icons/Yahoo2.png \
  Icons/Yahoo.png \
  Icons/YouTube.png

meshesdir = $(PKGDATADIR)/Meshes
dist_meshes_DATA = \
  Meshes/Sphere.imsh \
  Meshes/Teapot.imsh \
  Meshes/Venus.imsh

uitexturesdir = $(PKGDATADIR)/UITextures
dist_uitextures_DATA = \
  UITextures/AddButton.png \
  UITextures/ButtonDisable.tga \
  UITextures/ButtonMouseDown.tga \
  UITextures/ButtonMouseNormal.tga \
  UITextures/ButtonMouseOver.tga \
  UITextures/ButtonNormal.tga \
  UITextures/CancelButton.png \
  UITextures/CheckBoxDisableOff.tga \
  UITextures/CheckBoxDisableOn.tga \
  UITextures/CheckBoxMouseDownOff.tga \
  UITextures/CheckBoxMouseDownOn.tga \
  UITextures/CheckBoxMouseOverOff.tga \
  UITextures/CheckBoxMouseOverOn.tga \
  UITextures/CheckBoxNormalOff.tga \
  UITextures/CheckBoxNormalOn.tga \
  UITextures/ComboBoxButton.tga \
  UITextures/Corner_shadow.tga \
  UITextures/Dot-6x6.tga \
  UITextures/DropShadow_10pxrad.tga \
  UITextures/DropShadow_4pxrad.tga \
  UITextures/ellipsisbutton.tga \
  UITextures/Folder-16x16.tga \
  UITextures/Folder-24x24.tga \
  UITextures/FunctionGraphBackground.tga \
  UITextures/GraphBarIcon.tga \
  UITextures/GraphIcon.tga \
  UITextures/HScrollBar.tga \
  UITextures/InalogicShapes.csh \
  UITextures/InalogicStyle.asl \
  UITextures/Matrix3Preview.tga \
  UITextures/Matrix4Preview.tga \
  UITextures/Painter.xml \
  UITextures/RadioDisableOff.tga \
  UITextures/RadioDisableOn.tga \
  UITextures/RadioMouseDownOff.tga \
  UITextures/RadioMouseDownOn.tga \
  UITextures/RadioMouseOverOff.tga \
  UITextures/RadioMouseOverOn.tga \
  UITextures/RadioNormalOff.tga \
  UITextures/RadioNormalOn.tga \
  UITextures/RoundCorner_10pxrad.tga \
  UITextures/RoundCorner_10px_shadow.tga \
  UITextures/RoundCorner_1pxrad.tga \
  UITextures/RoundCorner_2pxrad.tga \
  UITextures/RoundCorner_4pxrad.tga \
  UITextures/RoundCorner_4px_shadow.tga \
  UITextures/ScrollBarTriangleDown.tga \
  UITextures/ScrollBarTriangleLeft.tga \
  UITextures/ScrollBarTriangleRight.tga \
  UITextures/ScrollBarTriangleUp.tga \
  UITextures/SpinerDown.tga \
  UITextures/SpinerUp.tga \
  UITextures/Square.png \
  UITextures/Square.tga \
  UITextures/Stroke_0pxrad_1px.tga \
  UITextures/Stroke_10pxrad_2px.tga \
  UITextures/Stroke_1pxrad_1px.tga \
  UITextures/Stroke_1pxrad_2px.tga \
  UITextures/Stroke_2pxrad_1px.tga \
  UITextures/Stroke_2pxrad_2px.tga \
  UITextures/Stroke_4pxrad_2px.tga \
  UITextures/TabLeft.tga \
  UITextures/TabRight.tga \
  UITextures/TreeNodeClose.tga \
  UITextures/TreeNodeOpen.tga \
  UITextures/TriangleDown.tga \
  UITextures/TriangleLeft.tga \
  UITextures/TriangleRight.tga \
  UITextures/TriangleUp.tga \
  UITextures/UIArchive.iar \
  UITextures/Untitled_Styles.asl \
  UITextures/ValuatorHorizontalMove.tga \
  UITextures/ValuatorMove.tga \
  UITextures/ValuatorVerticalMove.tga \
  UITextures/VectorWLabel.tga \
  UITextures/VectorXLabel.tga \
  UITextures/VectorYLabel.tga \
  UITextures/VectorZLabel.tga \
  UITextures/VScrollBar.tga \
  UITextures/WindowSizeGrip2.tga \
  UITextures/WindowSizeGrip.tga
