# Please keep these in alphabetical order
PKGDATADIR=$(pkgdatadir)/@NUX_API_VERSION@

fontdir = $(PKGDATADIR)/Fonts
dist_font_DATA = \
  Fonts/nuxfont_size_8_bold_page_0.png \
  Fonts/nuxfont_size_8_bold.txt \
  Fonts/nuxfont_size_8_page_0.png \
  Fonts/nuxfont_size_8.txt

uitexturesdir = $(PKGDATADIR)/UITextures
dist_uitextures_DATA = \
  UITextures/AddButton.png \
  UITextures/button-disabled.png \
  UITextures/button-mousedown.png \
  UITextures/button-mouseover.png \
  UITextures/button.png \
  UITextures/CancelButton.png \
  UITextures/checkbox-off-disable.png \
  UITextures/checkbox-off-mousedown.png \
  UITextures/checkbox-off-mouseover.png \
  UITextures/checkbox-off.png \
  UITextures/checkbox-on-disable.png \
  UITextures/checkbox-on-mousedown.png \
  UITextures/checkbox-on-mouseover.png \
  UITextures/checkbox-on.png \
  UITextures/ComboBoxButton.tga \
  UITextures/Corner_shadow.tga \
  UITextures/Dot-6x6.tga \
  UITextures/DropShadow_10pxrad.tga \
  UITextures/DropShadow_4pxrad.tga \
  UITextures/ellipsisbutton.tga \
  UITextures/Folder-16x16.tga \
  UITextures/Folder-24x24.tga \
  UITextures/FunctionGraphBackground.tga \
  UITextures/GraphBarIcon.tga \
  UITextures/GraphIcon.tga \
  UITextures/HScrollBar.tga \
  UITextures/InalogicStyle.asl \
  UITextures/Matrix3Preview.tga \
  UITextures/Matrix4Preview.tga \
  UITextures/Painter.xml \
  UITextures/radiobutton-off-disable.png \
  UITextures/radiobutton-off-mousedown.png \
  UITextures/radiobutton-off-mouseover.png \
  UITextures/radiobutton-off.png \
  UITextures/radiobutton-on-disable.png \
  UITextures/radiobutton-on-mousedown.png \
  UITextures/radiobutton-on-mouseover.png \
  UITextures/radiobutton-on.png \
  UITextures/RoundCorner_10pxrad.tga \
  UITextures/RoundCorner_10px_shadow.tga \
  UITextures/RoundCorner_1pxrad.tga \
  UITextures/RoundCorner_2pxrad.tga \
  UITextures/RoundCorner_4pxrad.tga \
  UITextures/RoundCorner_5pxrad.tga \
  UITextures/RoundCorner_6pxrad.tga \
  UITextures/RoundCorner_4px_shadow.tga \
  UITextures/ScrollBarTriangleDown.tga \
  UITextures/ScrollBarTriangleLeft.tga \
  UITextures/ScrollBarTriangleRight.tga \
  UITextures/ScrollBarTriangleUp.tga \
  UITextures/SpinerDown.tga \
  UITextures/SpinerUp.tga \
  UITextures/Stroke_0pxrad_1px.tga \
  UITextures/Stroke_10pxrad_2px.tga \
  UITextures/Stroke_1pxrad_1px.tga \
  UITextures/Stroke_1pxrad_2px.tga \
  UITextures/Stroke_2pxrad_1px.tga \
  UITextures/Stroke_2pxrad_2px.tga \
  UITextures/Stroke_4pxrad_2px.tga \
  UITextures/TabLeft.tga \
  UITextures/TabRight.tga \
  UITextures/TreeNodeClose.tga \
  UITextures/TreeNodeOpen.tga \
  UITextures/TriangleDown.tga \
  UITextures/TriangleLeft.tga \
  UITextures/TriangleRight.tga \
  UITextures/TriangleUp.tga \
  UITextures/UIArchive.iar \
  UITextures/ValuatorHorizontalMove.tga \
  UITextures/ValuatorMove.tga \
  UITextures/ValuatorVerticalMove.tga \
  UITextures/VectorWLabel.tga \
  UITextures/VectorXLabel.tga \
  UITextures/VectorYLabel.tga \
  UITextures/VectorZLabel.tga \
  UITextures/VScrollBar.tga \
  UITextures/WindowSizeGrip.tga \
  UITextures/nux.png
